wrk in progress

--- a/index.html
+++ b/index.html
@@ -24,15 +24,42 @@
     </div>
     <div class="logo"> 
       <h2>Букет роз</h2>
-      <p>Интернет-магазин</p>
+      <p class="decor">Интернет-магазин</p>
+      <div class="yellow-block">
+        <h3>Розы</h3>
+        <p>
+           
+          для ваших близких от <span>72</span>&ensp;&emsp;шт
+        </p>
+      </div>
     </div>
-    <div class="yellow-block">
-      <h3>Розы</h3>
-      <p>
-         для ваших близких от <span>72</span>&ensp;&emsp;шт</p>
-    </div>
+    <div class="gradient"><a href="#" class="buy-button">Купить 
+        <div data-count="1" class="circle"></div>
+        <div data-count="2" class="circle"></div>
+        <div data-count="3" class="circle"></div>
+        <div data-count="4" class="circle"></div></a></div>
   </header>
-  <div class="test1">
-    <div class="gradient"></div>
+  <div class="offer">
+    <div class="block offer-one">
+      <h3>Одна роза</h3>
+      <p>Элегантный подарок любимому&nbsp;человеку</p>
+      <form>
+        <div class="rose">
+          <input type="radio" name="rose" id="red-rose" checked>
+          <label for="red-rose">красная</label><br>
+          <input type="radio" id="white-rose" name="rose">
+          <label for="white-rose">белая</label>
+        </div>
+      </form>
+    </div>
+    <div class="block offer-low">
+      <h3>7 роз</h3>
+      <p>
+         
+        Классический букет из<br>семи&nbsp;роз
+      </p>
+    </div>
+    <div class="block offer-medium"></div>
+    <div class="block offer-custom"></div>
   </div>
 </body>
