--- a/index.html
+++ b/index.html
@@ -28,38 +28,121 @@
       <div class="yellow-block">
         <h3>Розы</h3>
         <p>
-           
-          для ваших близких от <span>72</span>&ensp;&emsp;шт
-        </p>
+           для ваших близких от <span>72</span>&ensp;&emsp;шт</p>
       </div>
     </div>
-    <div class="gradient"><a href="#" class="buy-button">Купить 
-        <div data-count="1" class="circle"></div>
-        <div data-count="2" class="circle"></div>
-        <div data-count="3" class="circle"></div>
-        <div data-count="4" class="circle"></div></a></div>
+    <div class="gradient"><a class="buy-button" href="#">Купить 
+        <div class="circle" data-count="1"></div>
+        <div class="circle" data-count="2"></div>
+        <div class="circle" data-count="3"></div>
+        <div class="circle" data-count="4"></div></a></div>
   </header>
   <div class="offer">
     <div class="block offer-one">
       <h3>Одна роза</h3>
       <p>Элегантный подарок любимому&nbsp;человеку</p>
       <form>
-        <div class="rose">
-          <input type="radio" name="rose" id="red-rose" checked>
-          <label for="red-rose">красная</label><br>
-          <input type="radio" id="white-rose" name="rose">
-          <label for="white-rose">белая</label>
+        <div class="radio">
+          <input type="radio" name="rose-one" id="red-rose-one" checked>
+          <label for="red-rose-one">красная</label><br>
+          <input type="radio" id="white-rose-one" name="rose-one">
+          <label for="white-rose-one">белая</label>
+        </div>
+        <div class="radio">
+          <input type="radio" name="delivery-one" id="delivery-one" checked>
+          <label for="delivery-one">самовывоз</label><br>
+          <input type="radio" id="delivery-pay-one" name="delivery-one" data-name="delivery-pay">
+          <label for="delivery-pay-one">
+             доставка <br><span>+200 Р</span></label>
         </div>
       </form>
+      <p class="cost"><span>80 </span>Р</p>
+      <input type="submit" value="Купить">
     </div>
     <div class="block offer-low">
       <h3>7 роз</h3>
       <p>
-         
-        Классический букет из<br>семи&nbsp;роз
-      </p>
+         Классический букет из<br>семи&nbsp;роз</p>
+      <form>
+        <div class="radio">
+          <input type="radio" name="rose-low" id="red-rose-low" checked>
+          <label for="red-rose-low">красная</label><br>
+          <input type="radio" id="white-rose-low" name="rose-low">
+          <label for="white-rose-low">белая</label><br>
+          <input type="radio" id="random-rose-low" name="rose-low">
+          <label for="random-rose-low">смешанные</label>
+        </div>
+        <div class="radio">
+          <input type="radio" name="delivery-low" id="delivery-low" checked>
+          <label for="delivery-low">самовывоз</label><br>
+          <input type="radio" id="delivery-pay-low" name="delivery-low" data-name="delivery-pay">
+          <label for="delivery-pay-low">
+             доставка <br><span>+200 Р</span></label>
+        </div>
+      </form>
+      <p class="cost"><span>504 </span>Р</p>
+      <div class="sale">
+        <p>
+           скидка <span>10%</span></p>
+        <p class="line-through">560 Р</p>
+      </div>
+      <input type="submit" value="Купить">
     </div>
-    <div class="block offer-medium"></div>
-    <div class="block offer-custom"></div>
+    <div class="block popular">
+      <h3>15 роз</h3>
+      <form>
+        <div class="radio">
+          <input type="radio" name="rose-popular" id="red-rose-popular" checked>
+          <label for="red-rose-popular">красная</label><br>
+          <input type="radio" id="white-rose-popular" name="rose-popular">
+          <label for="white-rose-popular">белая</label><br>
+          <input type="radio" id="random-rose-popular" name="rose-popular">
+          <label for="random-rose-popular">смешанные</label>
+        </div>
+        <div class="radio">
+          <input type="radio" name="delivery-popular" id="delivery-popular" checked>
+          <label for="delivery-popular">самовывоз</label><br>
+          <input type="radio" id="delivery-pay-popular" name="delivery-popular" data-name="delivery-pay">
+          <label for="delivery-pay-popular">
+             доставка <br><span>бесплатно!</span></label>
+        </div>
+      </form>
+      <p class="cost"><span>1080 </span>Р</p>
+      <div class="sale">
+        <p>
+           скидка <span>10%</span></p>
+        <p class="line-through">1200 Р</p>
+      </div>
+      <input type="submit" value="Купить">
+    </div>
+    <div class="block custom">
+      <h3>7 роз</h3>
+      <p>
+         Составьте свой  букет!</p>
+      <form>
+        <div class="radio">
+          <input type="radio" name="rose-custom" id="red-rose-custom" checked>
+          <label for="red-rose-custom">красная</label><br>
+          <input type="radio" id="white-rose-custom" name="rose-custom">
+          <label for="white-rose-custom">белая</label><br>
+          <input type="radio" id="random-rose-custom" name="rose-custom">
+          <label for="random-rose-custom">смешанные</label>
+        </div>
+        <div class="radio">
+          <input type="radio" name="delivery-custom" id="delivery-custom" checked>
+          <label for="delivery-custom">самовывоз</label><br>
+          <input type="radio" id="delivery-pay-custom" name="delivery-custom" data-name="delivery-pay">
+          <label for="delivery-pay-custom">
+             доставка <br><span>бесплатно!</span></label>
+        </div>
+      </form>
+      <p class="cost"><span>2232 </span>Р</p>
+      <div class="sale">
+        <p>
+           скидка <span>10%</span></p>
+        <p class="line-through">2480 Р</p>
+      </div>
+      <input type="submit" value="Купить">
+    </div>
   </div>
 </body>
