--- a/pug/index.html
+++ b/pug/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="script/input-arrows.js"></script>
 </head>
 <title>Букет роз - интернет магазин</title>
 <body>
@@ -128,12 +127,9 @@
       <input type="submit" value="Купить">
     </div>
     <div class="block custom">
-      <h3>роза</h3>
-      <p class="about">Составьте свой букет!</p>
-      <input type="number" name="rose-count" id="rose-count" min="3" max="999" value="32">
+      <h3>7 роз</h3>
+      <p class="about">Составьте свой  букет!</p>
       <form>
-        <div class="arrowup"></div>
-        <div class="arrowdown"></div>
         <div class="radio">
           <input type="radio" name="rose-custom" id="red-rose-custom" checked>
           <label for="red-rose-custom">красная</label><br>
@@ -152,13 +148,13 @@
           </label>
         </div>
       </form>
-      <p class="cost"><span id="sale-cost"> </span>Р</p>
+      <p class="cost"><span>2232 </span>Р</p>
       <div class="sale">
         <p>
            
           скидка <span>10%</span>
         </p>
-        <p id="total-cost" class="line-through"> Р</p>
+        <p class="line-through">2480 Р</p>
       </div>
       <input type="submit" value="Купить">
     </div>
