--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/main.css">
   <meta name="viewport" content="width=device-width">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="script/input-arrows.js"></script>
 </head>
 <title>Букет роз - интернет магазин</title>
 <body>
@@ -128,9 +125,9 @@
       <input type="submit" value="Купить">
     </div>
     <div class="block custom">
-      <h3>роза</h3>
+      <h3>роз</h3>
       <p class="about">Составьте свой букет!</p>
-      <input type="number" name="rose-count" id="rose-count" min="3" max="999" value="32">
+      <input type="number" name="rose-count" id="rose-count" min="0" max="999" value="25" pattern="0-9*">
       <form>
         <div class="arrowup"></div>
         <div class="arrowdown"></div>
@@ -153,7 +150,7 @@
         </div>
       </form>
       <p class="cost"><span id="sale-cost"> </span>Р</p>
-      <div class="sale">
+      <div id="sale" class="sale">
         <p>
            
           скидка <span>10%</span>
@@ -163,4 +160,7 @@
       <input type="submit" value="Купить">
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="script/input-arrows.js"></script>
 </body>
