--- a/index.html
+++ b/index.html
@@ -189,6 +189,21 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <div class="copyright">
+      <p>
+         ©2013, интернет-магазин&nbsp;«Букет&nbsp;роз». Все права защищены.</p>
+    </div>
+    <div class="payment">
+      <p>Способы оплаты:</p>
+    </div>
+    <div class="social">
+      <p>Поделиться с друзьями:</p><a class="vk" target="_blank" href="http://vk.com"></a><a class="facebook" target="_blank" href="http://facebook.com"></a><a class="twitter" target="_blank" href="http://twitter.com"></a>
+    </div>
+    <div class="copyright">
+      <p>Разработка и дизайн.</p><a href="#">ООО «Росапп»</a>
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="script/input-arrows.js"></script>
