--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
 </head>
 <title>Букет роз - интернет магазин</title>
-<body data-popup="">
+<body>
   <header class="header">
     <nav class="navigation">
       <ul>
