--- a/index.html
+++ b/index.html
@@ -155,14 +155,18 @@
       <p>Другие фото</p>
     </div>
     <div class="more-images">
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
-      <div class="bouquet"></div>
+      <div class="bouquet" data-item="1"></div>
+      <div class="bouquet" data-item="2"></div>
+      <div class="bouquet" data-item="3"></div>
+      <div class="bouquet" data-item="4"></div>
+      <div class="bouquet" data-item="5"></div>
+      <div class="bouquet" data-item="6"></div>
+      <div class="bouquet" data-item="7"></div>
+      <div class="bouquet" data-item="8"></div>
+      <div class="zoom">
+        <div class="left"></div>
+        <div class="right"></div>
+      </div>
     </div>
   </div>
   <div class="features">
