--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
     </div>
     <div class="first-rose"></div>
     <div class="second-rose"></div>
-    <div class="more-rose">
+    <div class="more-rose" data-gallery="test">
       <p>Другие фото</p>
-    </div>
-    <div class="more-images">
-      <div class="bouquet" data-item="1"></div>
-      <div class="bouquet" data-item="2"></div>
-      <div class="bouquet" data-item="3"></div>
-      <div class="bouquet" data-item="4"></div>
-      <div class="bouquet" data-item="5"></div>
-      <div class="bouquet" data-item="6"></div>
-      <div class="bouquet" data-item="7"></div>
-      <div class="bouquet" data-item="8"></div>
-      <div class="zoom">
-        <div class="left"></div>
-        <div class="right"></div>
+      <div class="more-images">
+        <div class="bouquet" data-item="1"></div>
+        <div class="bouquet" data-item="2"></div>
+        <div class="bouquet" data-item="3"></div>
+        <div class="bouquet" data-item="4"></div>
+        <div class="bouquet" data-item="5"></div>
+        <div class="bouquet" data-item="6"></div>
+        <div class="bouquet" data-item="7"></div>
+        <div class="bouquet" data-item="8"></div>
+        <div class="zoom">
+          <div class="left"></div>
+          <div class="right"></div>
+        </div>
       </div>
     </div>
   </div>
