--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
     </div>
     <div class="first-rose"></div>
     <div class="second-rose"></div>
-    <div class="more-rose" data-gallery="test">
-      <p>Другие фото</p>
+    <p class="more-rose" data-gallery>Другие фото
       <div class="more-images">
         <div class="bouquet" data-item="1"></div>
         <div class="bouquet" data-item="2"></div>
@@ -163,11 +162,11 @@
         <div class="bouquet" data-item="7"></div>
         <div class="bouquet" data-item="8"></div>
         <div class="zoom">
-          <div class="left"></div>
-          <div class="right"></div>
+          <div class="move-image" data-move="left"></div>
+          <div class="move-image" data-move="right"></div>
         </div>
       </div>
-    </div>
+    </p>
   </div>
   <div class="features">
     <div class="slider">
